# reincarnate

./: .gitignore  API-COVERAGE-FLASH.md  CLAUDE.md  CONTEXT.md  Cargo.toml  LICENSE  README.md  TODO.md  flake.nix
.claude/: settings.json
.githooks/: pre-commit
.normalize/: ratchet.json
crates/formats/datawin/: .gitignore  Cargo.toml  game_maker_data.ksy  game_maker_data.py  gml_bytecode.ksy  gml_bytecode.py
crates/formats/datawin/src/: cursor.rs  datawin.rs  error.rs  lib.rs  reader.rs  string_table.rs  version.rs  writer.rs
crates/formats/datawin/src/bytecode/: decode.rs  encode.rs  mod.rs  opcode.rs  types.rs
crates/formats/datawin/src/chunks/: audo.rs  code.rs  extn.rs  font.rs  func.rs  gen8.rs  glob.rs  lang.rs  mod.rs  objt.rs  optn.rs  room.rs  scpt.rs  shdr.rs  sond.rs  sprt.rs  tpag.rs  txtr.rs  vari.rs
crates/formats/datawin/tests/: fixture_tests.rs  kaitai_validate.py  read_files.rs
crates/formats/datawin/tests/fixtures/: v14_minimal.json  v15_bytecode_variety.json  v15_font.json  v15_minimal.json  v15_more_opcodes.json  v15_objt.json  v15_optn.json  v15_room.json  v15_shared_blob.json  v15_simple_chunks.json  v15_sond_audo.json  v15_sprt_tpag_txtr.json  v15_vari_func.json
crates/frontends/reincarnate-frontend-twine/: Cargo.toml
crates/frontends/reincarnate-frontend-twine/src/: extract.rs  html_util.rs  lib.rs
crates/frontends/reincarnate-frontend-twine/src/harlowe/: ast.rs  expr.rs  lexer.rs  macros.rs  mod.rs  parser.rs  translate.rs
crates/frontends/reincarnate-frontend-twine/src/sugarcube/: ast.rs  custom_macros.rs  expr.rs  macros.rs  mod.rs  parser.rs  preprocess.rs  translate.rs
crates/frontends/reincarnate-frontend-twine/tests/: debug_errors.rs  sugarcube_e2e.rs
docs/: index.md  (+6 more)
(+320 files in other folders)
