[package]
name = "datawin"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Reader/writer for GameMaker's compiled data.win format"

[dependencies]
thiserror = { workspace = true }
bitflags = "2"

[dev-dependencies]
serde_json = { workspace = true }
